v0.0.1/modules/schema/pages/class/TownDetail.adoc
= `TownDetail`
:toclevels: 4


+++Town details, in the context of address.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TownDetail`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`TownDetail`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<code,`code`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Town code.+++

| <<country,`country`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the country.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Town name.+++

| <<section,`section`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Town section. For example, it is common for there to be 36 sections per township.+++

| <<stateOrProvince,`stateOrProvince`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the state or province.+++
|===

'''


//[discrete]
[#code]
=== `code`
+++Town code.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TownDetail.code`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#country]
=== `country`
+++Name of the country.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TownDetail.country`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#name]
=== `name`
+++Town name.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TownDetail.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#section]
=== `section`
+++Town section. For example, it is common for there to be 36 sections per township.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TownDetail.section`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#stateOrProvince]
=== `stateOrProvince`
+++Name of the state or province.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TownDetail.stateOrProvince`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


